# Insight-Report-AI

./: README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  reports.py
backend/app/services/: ai_report.py  chart.py  eda.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/report/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ReportView.tsx  UploadForm.tsx
