[project]
name = "insight-report-ai-backend"
version = "0.1.0"
description = "Backend API for Insight Report AI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.73.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py312"
